--- a/merchandise/p1/p1.html
+++ b/merchandise/p1/p1.html
@@ -138,7 +138,7 @@
             姓名： &nbsp<input type="text" name="姓名" id="formName" style="margin-right:200px;" required>
             E-mail： &nbsp<input type="email" name="_replyto" id="formMail" required><br>
             問題：<br>
-            <textarea rows="6" cols="111" name="message" id="comment" placeholder="為避免遭到有心人士的利用，請勿在此處留下任何涉及個資的訊息，以免造成不必要的麻煩及損失！" maxlength="250" required></textarea><br>
+            <textarea rows="6" cols="111" name="問題" id="comment" placeholder="為避免遭到有心人士的利用，請勿在此處留下任何涉及個資的訊息，以免造成不必要的麻煩及損失！" maxlength="250" required></textarea><br>
             <span style="font-size: 14px;">（字數限制：250字元）</span></br>
             <input type="hidden" name="_next" value="../../thankyou/merchanThankyou.html" />
             <input type="hidden" name="_subject" value="雨ಌ坊│（商品名稱）商品問題" id="subject" />
