--- a/contact/contact.html
+++ b/contact/contact.html
@@ -48,7 +48,7 @@
     <h4 style="color: #C30027"> 	&#9830;	想進一步了解商品或訂單資訊，或是任何相關問題與建議，歡迎您的來信 &#9830; </h4>
     <h4 style="color: #C30027"> 	&#9830;	請填寫正確資訊並詳述問題，我們將盡速以E-mail回覆您 &#9830; </h4>
     <div id="formContainer">
-        <form action="https://formspree.io/phchang1103@gmail.com" method="POST">
+        <form action="https://formspree.io/asukahina@hotmail.com" method="POST">
           <table>
             <tr>
               <td style="text-align:right; vertical-align: top; width:210px; padding-top: 1px; line-height:28px;">
