--- a/merchandise/p1/p1.html
+++ b/merchandise/p1/p1.html
@@ -134,7 +134,7 @@
           </br>
           <div class="keyinQ">
             <span id="QAtype" style="font-weight:600;">提出問題</span>（在賣家回覆前，問題屬於未公開狀態，賣家可選擇是否答覆；賣家回覆後，才會公開顯示於頁面中。）</br>
-            <form name="contactform" action="https://formspree.io/phchang1103@gmail.com" method="post" id="merchandiseQ"  onreset="return allowReset()" onsubmit="return allowSend()">
+            <form name="contactform" action="https://formspree.io/asukahina@hotmail.com" method="post" id="merchandiseQ"  onreset="return allowReset()" onsubmit="return allowSend()">
             姓名： &nbsp<input type="text" name="姓名" id="formName" style="margin-right:200px;" required>
             E-mail： &nbsp<input type="email" name="_replyto" id="formMail" required><br>
             問題：<br>
