example photo changed

--- a/merchandise/p1/p1.html
+++ b/merchandise/p1/p1.html
@@ -64,7 +64,7 @@
     </div>
     <table id="detail">
       <tr>
-        <td id="pHeader">日版 COMIC◎10《NEKOPARA》貓娘A3PVC桌墊</br>This is the main header for name.</td>
+        <td id="pHeader">Amethyst Necklace Diamond Accent Sterling Silver</td>
       </tr>
       <tr>
         <td id="description1">
@@ -79,7 +79,7 @@
         <td id="description2">
           <ul>
             <li>&#8226商品價格：<span id="thin" style="color: #C30027;">NTD$ 500</span></li>
-            <li>&#8226運送方式：<span id="thin" style="color: #C30027;">肥貓宅急便</span></li>
+            <li>&#8226運送方式：<span id="thin" style="color: #C30027;">掛號郵寄／超商</span></li>
           </ul>
         </br>
           <a id="buttonMessage" href="">私訊詢問</a>
